--- a/media.html
+++ b/media.html
@@ -140,12 +140,11 @@
 						<div id="Videos" class="tabcontent">
 							
 							<div class="row">
-								<div class="col-6"><span class="image fit">
-									<video width="100%" controls style="border-radius: 1em">
-										<source src="assets/images/media/array-lesson.mp4" type="video/mp4">
-									</video>
-									<p style="text-align: center; font-size: 16px">Mock lesson solving a simple array problem</p>
-									</span></div>
+								<div class="col-6">
+									<div class="video_container">
+									<iframe src="https://www.youtube-nocookie.com/embed/Yj7nCliM8C4?rel=0;modestbranding=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="videos"></iframe>
+									</div>
+								</div>
 							</div>
 						</div>
 						
