Added Piano Video to Media Page

--- a/media.html
+++ b/media.html
@@ -139,10 +139,15 @@
 
 						<div id="Videos" class="tabcontent">
 							
-							<div class="row">
+							<div class="row" style="margin-bottom: 2em">
 								<div class="col-6">
 									<div class="video_container">
-									<iframe src="https://www.youtube-nocookie.com/embed/Yj7nCliM8C4?rel=0;modestbranding=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="videos"></iframe>
+										<iframe src="https://www.youtube-nocookie.com/embed/Yj7nCliM8C4?rel=0;modestbranding=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="videos"></iframe>
+									</div>
+								</div>
+								<div class="col-6">
+									<div class="video_container">
+										<iframe src="https://www.youtube-nocookie.com/embed/ZALzqYYw4X8?rel=0;modestbranding=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="videos"></iframe>
 									</div>
 								</div>
 							</div>
@@ -202,7 +207,6 @@
 				  elmnt.style.backgroundColor = color;
 				}
 				
-				// Get the element with id="defaultOpen" and click on it
 				document.getElementById("defaultOpen").click();
 			</script>
 
