Removed redundant code

--- a/about.html
+++ b/about.html
@@ -36,22 +36,6 @@
 						</ul> -->
 					</nav>
 
-				<!-- Banner -->
-				<!-- Note: The "styleN" class below should match that of the header element. -->
-					<!-- <section id="banner" class="style2">
-						<div class="inner">
-							<span class="image">
-								<img src="images/pic07.jpg" alt="" />
-							</span>
-							<header class="major">
-								<h1>About Me</h1>
-							</header>
-							<div class="content">
-								<p>A self-motivated, passionate team leader.</p>
-							</div>
-						</div>
-					</section> -->
-
 				<!-- Main -->
 					<div id="main">
 
@@ -60,7 +44,7 @@
 								<header class="major">
 									<h1>About Me</h1>
 								</header>
-								<p style="text-align: justify">I'm William, a second-year student studying Bachelor of Science (Advanced Mathematics) (Honours) / Bachelor of Science (Computer Science) at the University of New South Wales.
+								<p>I'm William, a second-year student studying Bachelor of Science (Advanced Mathematics) (Honours) / Bachelor of Science (Computer Science) at the University of New South Wales.
 									<br><br> From a young age, I've been deeply intrigued by the powerful applications that computers can perform, stimulating my aspiration to benefit human lives through research and innovation.
 									Although I'm grateful for my personal development from past opportunities, I feel naturally excited about the challenges that lie ahead of me.
 									<ul class="actions">
