--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<header class="major">
 									<h2>Hi, I'm William</h2>
 								</header>
-								<p style="text-align: justify">I'm a second-year student studying Advanced Mathematics (Honours) and Computer Science at UNSW.
+								<p">I'm a second-year student studying Advanced Mathematics (Honours) and Computer Science at UNSW.
 									This is a personal website that I've been creating in my spare time to pick up a few skills while having fun.
 									Feel free to explore all the pages and connect with me via the social media icons in the footer if you're interested to find out more!
 								</p>
