Updates with the responsive-friendly column layouts

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 								<h1>Welcome to William's Website!</h1>
 							</header>
 							<div class="content">
-								<p style="font-size:20px">A self-motivated, passionate team leader.</p>
+								<p style="text-align:left; font-size:20px">A self-motivated, passionate team leader.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Explore</a></li>
 								</ul>
@@ -53,9 +53,9 @@
 						<section id="one">
 							<div class="inner">
 								<header class="major">
-									<h2>Hi, I'm William</h2>
+									<h2><a href="about.html" class="link">Hi, I'm William</a></h2>
 								</header>
-								<p">I'm a second-year student studying Advanced Mathematics (Honours) and Computer Science at UNSW.
+								<p>I'm a second-year student studying Advanced Mathematics (Honours) and Computer Science at UNSW.
 									This is a personal website that I've been creating in my spare time to pick up a few skills while having fun.
 									Feel free to explore all the pages and connect with me via the social media icons in the footer if you're interested to find out more!
 								</p>
